[package]
name = "load-aware-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Abdul Azeem"]
description = "A load-aware reverse proxy that intelligently routes JSON-RPC requests to healthy Shardeum EVM nodes"
license = "MIT"
repository = "https://github.com/shardeum/load-aware-proxy"
keywords = ["rpc", "proxy", "load-balancer", "shardeum", "evm", "json-rpc"]
categories = ["network-programming", "web-programming"]

[dependencies]
axum = "0.8.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9.1"
url = "2.5"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"

